refactor jellyfin delete sync - separate code into modules

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ bash/qbittorrent-cleaner/qb_instances.lst
 python/jellyfin-delete-sync/config.py
 *.tmp
 python/jellyfin-delete-sync/episode_map.db
+*.patch
+/python/jellyfin-delete-sync/old versions
