--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ python/jellyfin-delete-sync/config.py
 python/jellyfin-delete-sync/episode_map.db
 *.patch
 /python/jellyfin-delete-sync/old versions
+python/connectivity-watchdog/mqtt_brokers.conf
